prevent a dcc chat from failing at creation

-uninitialized variables are not your friend
-ensure text view is created even if m_chatExtension has a strange value
BUG:232785